# aivps

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: pr-ci.yml
agents/templates/: vp-template.yaml
config/migrations/: README.md
config/schemas/: README.md
docs/coding-agents/: aivp-v1-system-design.md  implementation-roadmap.md  v1-scope-and-non-goals.md
docs/coding-agents/adrs/: ADR-0001-product-positioning-and-scope.md  ADR-0002-local-first-runtime-and-control-plane.md  ADR-0003-capability-secure-skill-execution-and-authorization.md  ADR-0004-yaml-configuration-contracts-and-activation-lifecycle.md  ADR-0005-scheduling-triggering-and-catch-up-semantics.md  ADR-0006-reliability-idempotency-and-failure-recovery.md  ADR-0007-budgets-quotas-and-llm-routing.md  ADR-0008-persistence-observability-audit-and-retention.md  ADR-0009-secrets-connectors-and-artifact-access.md  ADR-0010-user-interfaces-local-api-and-operational-controls.md  ADR-0011-packaging-platform-support-and-extensibility.md  ADR-0012-testing-determinism-and-skill-developer-experience.md  README.md
runtime/db/: README.md
skills/builtin/: README.md
src/aivp/: __init__.py  cli.py
src/aivp/bus/: __init__.py  store.py
src/aivp/config/: __init__.py  models.py
src/aivp/runtime/: __init__.py  daemon.py  db.py
src/aivp/server/: __init__.py  app.py
tests/: test_daemon.py  test_event_bus.py  test_runtime_db.py  test_server_app.py
